# kawada_ws

./: .gitignore  README.md  SYSTEM_GUIDE.md  check_cameras.sh  demo_dual_arm_control.py  launch_complete_system.sh  launch_robot.sh  test_dual_arm_system.py  test_joint_control.py  test_system.py
kawada_repo-main/kawada_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kawada_repo-main/kawada_moveit_config/config/: NEXTAGE.ros2_control.xacro  NEXTAGE.srdf  NEXTAGE.urdf.xacro  NEXTAGE_Left.ros2_control.xacro  cameras.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_py.yaml  ompl_planning.yaml  ros_controllers.yaml
kawada_repo-main/kawada_moveit_config/launch/: demo_no_gazebo.launch.py  dual_arm_control.launch.py  simple_dual_arm.launch.py  simple_dual_arm_control.launch.py  spawn_ur5_launch_moveit.launch.py  test_setup.launch.py
kawada_repo-main/kawada_moveit_config/scripts/: cartesian_control_publisher.py  cube_tf_broadcaster.py  direct_speed_test.py  fast_positions.py  grab_cube.py  gripper_diagnostics.py  pick_cube_moveit_py.py  pick_red_cube.cpp  simple_pick.cpp  ultra_fast_test.py
kawada_repo-main/kawada_moveit_config/worlds/: nextage_workspace.sdf  simple_workspace.sdf
kawada_repo-main/nextage_fillie_open_description/: CHANGELOG.rst  CMakeLists.txt  KRC_Robot_Model_LICENSE  package.xml
kawada_repo-main/nextage_fillie_open_description/models/: 00list.txt  BASE.wrl  CY.wrl  LEP.wrl  LSP.wrl  LSY.wrl  LWP.wrl  LWR.wrl  L_CAM.wrl  NP.wrl  NY.wrl  REP.wrl  RSP.wrl  RSY.wrl  RWP.wrl  RWR.wrl  R_CAM.wrl  WAIST_Link_mesh.wrl  WY.wrl  main.wrl
kawada_repo-main/nextage_fillie_open_description/realsense_model/: model.sdf
kawada_repo-main/nextage_fillie_open_description/urdf/: FillieOpen.urdf  nextage_fillie_open_gz.xacro  robotiq_2f_140_gripper.xacro  simple_gripper.xacro
kawada_repo-main/nextage_fillie_open_description/urdf/meshes/: CHEST_JOINT0_Link_mesh.dae  HEAD_JOINT0_Link_mesh.dae  HEAD_JOINT1_Link_mesh.dae  LARM_JOINT0_Link_mesh.dae  LARM_JOINT1_Link_mesh.dae  LARM_JOINT2_Link_mesh.dae  LARM_JOINT3_Link_mesh.dae  LARM_JOINT4_Link_mesh.dae  LARM_JOINT5_Link_mesh.dae  L_CAM.dae  RARM_JOINT0_Link_mesh.dae  RARM_JOINT1_Link_mesh.dae  RARM_JOINT2_Link_mesh.dae  RARM_JOINT3_Link_mesh.dae  RARM_JOINT4_Link_mesh.dae  R_CAM.dae  WAIST_Link_mesh.dae  WAIST_ONLY_Link_mesh.dae
kawada_repo-main/nextage_fillie_open_description/urdf/meshes/visual/: CHEST_JOINT0_Link_mesh.mtl  HEAD_JOINT0_Link_mesh.mtl  HEAD_JOINT1_Link_mesh.mtl  LARM_JOINT0_Link_mesh.mtl  LARM_JOINT1_Link_mesh.mtl  LARM_JOINT2_Link_mesh.mtl  LARM_JOINT3_Link_mesh.mtl  LARM_JOINT4_Link_mesh.mtl  LARM_JOINT5_Link_mesh.mtl  L_CAM.mtl  RARM_JOINT0_Link_mesh.mtl  RARM_JOINT1_Link_mesh.mtl  RARM_JOINT2_Link_mesh.mtl  RARM_JOINT3_Link_mesh.mtl  RARM_JOINT4_Link_mesh.mtl  RARM_JOINT5_Link_mesh.mtl  R_CAM.mtl  WAIST_Link_mesh.mtl  WAIST_ONLY_Link_mesh.mtl
